Fixed <p> spacing

--- a/src/about/css/style-large.css
+++ b/src/about/css/style-large.css
@@ -11,7 +11,7 @@
 	}
 
 	.container {
-		width: 1000px;
+		width: 800px;
 	}
 
 /* Banner */
